--- a/Backend/config/config.env
+++ b/Backend/config/config.env
@@ -1,17 +1,18 @@
 PORT = 4000
-CLOUDINARY_CLIENT_NAME=
+CLOUDINARY_CLIENT_NAME=ddm0le0ip
 
 
 
-CLOUDINARY_CLIENT_API=
 
-CLOUDINARY_CLIENT_SECRET=
+CLOUDINARY_CLIENT_API=168594461237867
 
-FRONTEND_URL=
+CLOUDINARY_CLIENT_SECRET=Qd_fEQy3jwEdTBHsaIxH6wOzA68
 
-MONGO_URI= 
+FRONTEND_URL=http://localhost:5173
 
-JWT_SECRET_KEY=
+MONGO_URI=mongodb://127.0.0.1:27017
+
+JWT_SECRET_KEY=pintudevanshdilip
 
 JWT_EXPIRE=100d
 
