--- a/Backend/config/config.env
+++ b/Backend/config/config.env
@@ -1,19 +1,16 @@
 PORT = 4000
-CLOUDINARY_CLIENT_NAME=ddm0le0ip
+CLOUDINARY_CLIENT_NAME=
 
 
 
+CLOUDINARY_CLIENT_API=
 
-CLOUDINARY_CLIENT_API=168594461237867
-
-CLOUDINARY_CLIENT_SECRET=Qd_fEQy3jwEdTBHsaIxH6wOzA68
-
+CLOUDINARY_CLIENT_SECRET=
 FRONTEND_URL=http://localhost:5173
 
-MONGO_URI=mongodb://127.0.0.1:27017
+MONGO_URI=
 
-JWT_SECRET_KEY=pintudevanshdilip
-
+JWT_SECRET_KEY=
 JWT_EXPIRE=100d
 
 COOKIE_EXPIRE=100
